--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,14 +1,11 @@
  .cover__subtitle {
      display: flex;
-     flex-direction: column;
-     /* width: 360px; */
+     width: 320px;
      text-align: center;
      font-size: 18px;
      color: #FFF;
      font-family: Inter;
-     font-size: 18px;
      font-style: normal;
-     font-weight: 400;
-     line-height: 22px;
      z-index: 1;
+     margin: 0 auto;
  }
