--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,14 +1,11 @@
  .cover__title {
      display: flex;
-     flex-direction: column;
-     /* width: 560px; */
+     width: 464px;
      font-size: 72px;
      color: #FFF;
      text-align: center;
      font-family: Inter;
-     font-size: 72px;
      font-style: normal;
-     font-weight: 900;
-     line-height: 76px;
      z-index: 1;
+     margin: 0 auto;
  }
