--- a/blocks/intro/title/introTitle.css
+++ b/blocks/intro/title/introTitle.css
@@ -1,7 +1,7 @@
 .introTitle {
     color: #FFF;
     font-size: 54px;
-    /* font-family: Inter; */
+    font-family: Inter;
     font-style: normal;
     font-weight: 900;
     line-height: 58px;
