--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,8 @@
-@import url('/blocks/body/body.css');
+@import url('../blocks/body/body.css');
 
-@import url('/blocks/header/header.css');
-@import url('/blocks/header/lang/headerLang.css');
-@import url('/blocks/header/logo/headerLogo.css');
+@import url('../blocks/header/header.css');
+@import url('../blocks/header/lang/headerLang.css');
+@import url('../blocks/header/logo/headerLogo.css');
 
 @import url('../blocks/lead/lead.css');
 @import url('../blocks/lead/caption/leadCaption.css');
