--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover {
-    background-image: url('/img/background.png');
+    background-image: url('./img/background.png');
     color: white;
     width: 1184px;
     height: 740px;
