--- a/blocks/footer/copyright/footerCopyright.css
+++ b/blocks/footer/copyright/footerCopyright.css
@@ -1,3 +1,7 @@
 .footerCopyright{
     color: white;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px
 }
